--- a/src/components/homePage/ProductSlider/ProductsSlider.scss
+++ b/src/components/homePage/ProductSlider/ProductsSlider.scss
@@ -38,22 +38,26 @@
   }
 }
 
-.label-nextProduct {
-  content: url("./prev.svg");
-  position: absolute;
-  top: 11px;
-  right: 12px;
-  z-index: 10;
-  transform: rotate(180deg);
-  &:hover {
-    content: url("./prev.svg");
-  }
+.carousel--small {
+  overflow: hidden;
+  margin: auto;
+
 }
 
-.label-prevProduct {
-  content: url("./prev.svg");
-  position: absolute;
-  top: 11px;
-  right: 62px;
-  z-index: 10;
+.carousel--small__list {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.ProductsSlider__cards {
+  margin-top: 30px;
+  margin-bottom: 80px;
+}
+
+.disabled {
+  &:hover {
+    border: 1px solid #e2e6e9;
+  }
 }
