--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,7 +1,7 @@
 .footer {
   height: 96px;
   border: 1px solid #e2e6e9;
-  padding: 0 120px;
+  padding: 0 123px;
   &__nav {
     margin-top: 20px;
     display: flex;
@@ -14,5 +14,18 @@
   }
   &__link {
     margin-right: 30px;
+  }
+}
+
+.back-to-top {
+  width: 32px;
+  height: 32px;
+  border: 1px solid #b4bdc4;
+  background-color: inherit;
+  margin-top: 10px;
+  margin-right: 30px;
+  transition: 0.3s;
+  &:hover {
+    border: 1px solid #313237;
   }
 }
