--- a/src/components/homePage/ShopByCategory.scss
+++ b/src/components/homePage/ShopByCategory.scss
@@ -19,8 +19,12 @@
     margin-right: 16px;
     text-decoration: none;
     color: #313237;
+    transition: 0.3s;
     &:visited {
       color: #313237;
+    }
+    &:hover {
+      transform: scale(1.08);
     }
   }
   &__card-image {
@@ -38,5 +42,6 @@
     font-size: 14px;
     line-height: 21px;
     color: #89939a;
+    margin-top: 2px;
   }
 }
