--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -25,6 +25,7 @@
   margin-top: 10px;
   margin-right: 30px;
   transition: 0.3s;
+  cursor: pointer;
   &:hover {
     border: 1px solid #313237;
   }
