--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,4 +3,7 @@ header {
   justify-content: space-between;
   height: 64px;
   border: 1px solid #e2e6e9;
+  &__nav {
+    position: relative;
+  }
 }
