--- a/src/components/header/Nav.scss
+++ b/src/components/header/Nav.scss
@@ -1,6 +1,8 @@
 .nav {
   display: inline-block;
   margin-left: 27px;
+  position: relative;
+  top: -30px;
   &__item {
     display: inline-block;
   }
