--- a/src/components/homePage/ProductCard/ProductCard.scss
+++ b/src/components/homePage/ProductCard/ProductCard.scss
@@ -8,8 +8,15 @@
   padding: 24px;
   border: 1px solid #e2e6e9;
   margin-right: 16px;
+  transition: 0.3s;
+  text-decoration: none;
+  color: #313237;
+  cursor: pointer;
   &:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07);
+  }
+  &:visited {
+    color: inherit;
   }
   &__picture {
     height: 264px;
@@ -57,7 +64,9 @@
       width: 176px;
       height: 40px;
       background-color: #313237;
+      transition: 0.3s;
       color: white;
+      cursor: pointer;
       &:hover {
         box-shadow: 0 3px 13px rgba(23, 32, 49, 0.26);
       }
@@ -69,6 +78,8 @@
       background-color: white;
       border: 1px solid #b4bdc3;
       box-sizing: border-box;
+      transition: 0.3s;
+      cursor: pointer;
       &:hover {
         border-color: #89939a;
       }
