--- a/src/components/ProductSlider/ProductsSlider.scss
+++ b/src/components/ProductSlider/ProductsSlider.scss
@@ -38,13 +38,13 @@
   }
 }
 
-.carousel--small {
+.carousel-small {
   overflow: hidden;
   margin: auto;
 
 }
 
-.carousel--small__list {
+.carousel-small__list {
   display: flex;
   list-style: none;
   padding: 0;
