--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -10,8 +10,8 @@
   margin-right: 16px;
   transition: 0.3s;
   text-decoration: none;
+  font-family: "Mont-SemiBold", sans-serif;
   color: #313237;
-  cursor: pointer;
   &:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07);
   }
@@ -28,6 +28,8 @@
     margin-top: 24px;
     display: flex;
     width: 100%;
+    text-decoration: none;
+    color: #313237;
     & a {
       font-size: 14px;
       line-height: 21px;
@@ -46,7 +48,7 @@
     line-height: 28px;
     font-weight: bold;
     border-bottom: 1px solid #e2e6e9;
-    &--value {
+    &-value {
       color: #89939a;
       text-decoration-line: line-through;
       margin-left: 8px;
@@ -57,7 +59,7 @@
     width: 100%;
     justify-content: space-between;
     margin-top: 12px;
-    &--add-to-cart {
+    &-add-to-cart {
       outline: none;
       border: none;
       box-sizing: border-box;
@@ -71,7 +73,7 @@
         box-shadow: 0 3px 13px rgba(23, 32, 49, 0.26);
       }
     }
-    &--favorites {
+    &-favorites {
       padding-top: 5px;
       width: 40px;
       height: 40px;
