--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,20 +1,17 @@
 @font-face {
   font-family: "Mont";
-  src: url("/src/fonts/Mont-Regular.otf") format("otf");
-  font-weight: normal;
-  font-style: normal;
+  font-weight: bolder;
+  src: url("./fonts/Mont-Bold.otf");
 }
 
 @font-face {
   font-family: "Mont";
-  src: url("/src/fonts/Mont-SemiBold.otf") format("otf");
   font-weight: normal;
-  font-style: normal;
+  src: url("./fonts/Mont-Regular.otf");
 }
 
 @font-face {
   font-family: "Mont";
-  src: url("/src/fonts/Mont-Bold.otf") format("otf");
-  font-weight: normal;
-  font-style: normal;
+  font-weight: bold;
+  src: url("./fonts/Mont-SemiBold.otf");
 }
