--- a/src/components/header/SearchInput.scss
+++ b/src/components/header/SearchInput.scss
@@ -25,7 +25,7 @@
     font-size: 26px;
     margin-right: 20px;
     border-radius: 50%;
-    &--remove {
+    &-remove {
       background-color: white;
       border: none;
       font-size: 21px;
