--- a/src/components/phonePages/PhonePages.scss
+++ b/src/components/phonePages/PhonePages.scss
@@ -34,7 +34,7 @@
   margin-top: 16px;
   display: flex;
   align-items: center;
-  &__svg--arrow {
+  &__svg-arrow {
     padding: 0 14px;
     transform: rotate(90deg);
   }
