--- a/src/components/phonePages/Pagination.scss
+++ b/src/components/phonePages/Pagination.scss
@@ -3,6 +3,9 @@
   justify-content: center;
   margin-top: 40px;
   margin-bottom: 80px;
+  &__arrow {
+    transform: rotate(180deg);
+  }
   &__button {
     text-align: center;
     width: 32px;
@@ -14,16 +17,6 @@
     transition: 0.3s;
     &:hover {
       border-color: #313237;
-    }
-    &-right > svg {
-      fill: #313237;
-      margin-bottom: 2px;
-      transform: rotate(90deg);
-    }
-    &-left > svg {
-      fill: #313237;
-      margin-bottom: 2px;
-      transform: rotate(-90deg);
     }
     &-page {
       margin: 0 4px;
@@ -42,8 +35,5 @@
   border-color: #e2e6e9;
   &:hover {
     border-color: #e2e6e9;
-  }
-  & > svg {
-    fill: #e2e6e9;
   }
 }
