--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -62,6 +62,7 @@
     &-add-to-cart {
       outline: none;
       border: none;
+      font-family: "Mont", sans-serif;
       box-sizing: border-box;
       width: 176px;
       height: 40px;
