--- a/src/components/header/SearchInput.scss
+++ b/src/components/header/SearchInput.scss
@@ -11,6 +11,7 @@
   &__input {
     display: flex;
     justify-content: space-between;
+    font-family: "Mont", sans-serif;
     align-items: center;
     height: 100%;
     width: 100%;
