--- a/src/components/itemPage/ItemPage.scss
+++ b/src/components/itemPage/ItemPage.scss
@@ -101,8 +101,13 @@
   flex-direction: column;
   justify-content: space-between;
   &__img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+  &__img-button {
+    border: none;
     width: 100px;
     height: 100px;
-    cursor: pointer;
   }
 }
