--- a/src/components/phonePages/SortBy.scss
+++ b/src/components/phonePages/SortBy.scss
@@ -5,6 +5,8 @@
   &__options {
     border: 1px solid #b4bdc3;
     box-sizing: border-box;
+    font-family: "Mont", sans-serif;
+    font-size: 14px;
     width: 128px;
     height: 40px;
     display: block;
