--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -12,6 +12,39 @@
   text-decoration: none;
   font-family: "Mont", sans-serif;
   color: #313237;
+  &__button-favorite {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    background-image: url("./favorite.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 1px solid #b4bdc4;
+    box-sizing: border-box;
+    transition: 0.3s;
+    cursor: pointer;
+    &:hover {
+      border-color: #313237;
+    }
+    &-check {
+      position: absolute;
+      top: -1px;
+      left: -1px;
+      height: 40px;
+      width: 40px;
+      background-repeat: no-repeat;
+      background-position: center;
+      transition: background-image 0.3s;
+    }
+    &-input {
+      position: absolute;
+      opacity: 0;
+      &:checked ~ .item__button-favorite-check {
+        background-image: url("./favorite-heart.svg");
+      }
+    }
+  }
+
   &:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.07);
   }
@@ -40,6 +73,7 @@
   }
   &__price {
     box-sizing: border-box;
+    font-family: "Mont", sans-serif;
     display: flex;
     align-items: center;
     height: 44px;
@@ -91,6 +125,7 @@
   flex-direction: column;
   margin-top: 12px;
   font-weight: bolder;
+  font-family: "Mont", sans-serif;
   width: 100%;
   & span {
     display: flex;
@@ -102,39 +137,6 @@
       &:last-child {
         color: #313237;
       }
-    }
-  }
-}
-
-.item__button-favorite {
-  position: relative;
-  width: 40px;
-  height: 40px;
-  background-image: url("./favorite.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  border: 1px solid #b4bdc4;
-  box-sizing: border-box;
-  transition: 0.3s;
-  cursor: pointer;
-  &:hover {
-    border-color: #313237;
-  }
-  &-check {
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    height: 40px;
-    width: 40px;
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: background-image 0.3s;
-  }
-  &-input {
-    position: absolute;
-    opacity: 0;
-    &:checked ~ .item__button-favorite-check {
-      background-image: url("./favorite-heart.svg");
     }
   }
 }
