--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -56,6 +56,11 @@
   }
   &__img {
     max-height: 208px;
+    transition: 0.3s;
+    &:hover {
+      transform: scale(1.1);
+      z-index: 1;
+    }
   }
   &__title {
     margin-top: 24px;
