--- a/src/components/header/Cart/Cart.scss
+++ b/src/components/header/Cart/Cart.scss
@@ -11,7 +11,9 @@
   margin: 0;
   padding: 0;
   &:hover {
-    border: 1px solid #313237;
-    z-index: 10;
+    -webkit-animation: swing 0.6s ease;
+    animation: swing 0.6s ease;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
   }
 }
