--- a/src/components/header/Nav.scss
+++ b/src/components/header/Nav.scss
@@ -26,3 +26,90 @@
   line-height: 61px;
   border-bottom: 3px solid black;
 }
+
+.animated {
+  span {
+    font-weight: 100;
+    transition: all 0.5s;
+  }
+  span:nth-child(2) {
+    transition-delay: 0.1s;
+  }
+  span:nth-child(3) {
+    transition-delay: 0.2s;
+  }
+  span:nth-child(4) {
+    transition-delay: 0.3s;
+  }
+  span:nth-child(5) {
+    transition-delay: 0.4s;
+  }
+  span:nth-child(6) {
+    transition-delay: 0.5s;
+  }
+  span:nth-child(7) {
+    transition-delay: 0.6s;
+  }
+  span:nth-child(8) {
+    transition-delay: 0.7s;
+  }
+  span:nth-child(9) {
+    transition-delay: 0.8s;
+  }
+  span:nth-child(10) {
+    transition-delay: 0.9s;
+  }
+  span:nth-child(11) {
+    transition-delay: 1s;
+  }
+  &:hover {
+    span {
+      font-weight: 700;
+    }
+    span:nth-child(11) {
+      transition-delay: 1s;
+    }
+    span:nth-child(10) {
+      transition-delay: 0.9s;
+    }
+    span:nth-child(9) {
+      transition-delay: 0.8s;
+    }
+    span:nth-child(8) {
+      transition-delay: 0.7s;
+    }
+    span:nth-child(7) {
+      transition-delay: 0.6s;
+    }
+    span:nth-child(6) {
+      transition-delay: 0.5s;
+    }
+    span:nth-child(5) {
+      transition-delay: 0.4s;
+    }
+    span:nth-child(4) {
+      transition-delay: 0.3s;
+    }
+    span:nth-child(3) {
+      transition-delay: 0.2s;
+    }
+    span:nth-child(2) {
+      transition-delay: 0.1s;
+    }
+    span:nth-child(1) {
+      transition-delay: 0s;
+    }
+  }
+
+  &.hover-shadow {
+    &:hover {
+      $color: #ddd;
+      text-shadow: 1px 1px 0 $color, 2px 2px 0 $color, 3px 3px 0 $color;
+    }
+  }
+  &.hover-color {
+    &:hover {
+      $color: #ddd;
+    }
+  }
+}
