--- a/src/components/itemPage/ItemPage.scss
+++ b/src/components/itemPage/ItemPage.scss
@@ -38,7 +38,7 @@
   }
 }
 
-.product-description {
+.item-description {
   &__title {
     font-weight: bold;
     font-size: 32px;
@@ -53,6 +53,13 @@
   justify-content: space-between;
   &__img {
     width: 600px;
+    & img {
+      transition: 0.3s;
+      cursor: pointer;
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
   }
   &__description {
     width: 300px;
@@ -101,6 +108,10 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
+    transition: 0.3s;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
   &__img-button {
     border: none;
