--- a/src/helpers/Pagination.scss
+++ b/src/helpers/Pagination.scss
@@ -15,6 +15,7 @@
     background-color: white;
     margin: 0 12px;
     transition: 0.3s;
+    cursor: pointer;
     &:hover {
       border-color: #313237;
     }
