--- a/src/components/itemPage/ItemPage.scss
+++ b/src/components/itemPage/ItemPage.scss
@@ -13,6 +13,7 @@
   }
   &__text-item {
     color: #313237;
+    text-transform: capitalize;
   }
   &__text-item-link {
     text-decoration: none;
