--- a/src/components/header/Cart/Cart.scss
+++ b/src/components/header/Cart/Cart.scss
@@ -1,10 +1,12 @@
+@import "../../../css_config/css_configuration.scss";
+
 .cart-link {
   position: relative;
   right: -1px;
   top: -1px;
   width: 64px;
   height: 64px;
-  border: 1px solid #b4bdc4;
+  border: 1px solid $IconsColor;
   display: inline-block;
   text-align: center;
   line-height: 64px;
