--- a/src/components/header/Logo/Logo.scss
+++ b/src/components/header/Logo/Logo.scss
@@ -7,4 +7,8 @@
   padding-right: 27px;
   padding-bottom: 30px;
   display: inline-block;
+  transition: 0.3s;
+  &:hover {
+    transform: scale(1.1);
+  }
 }
