--- a/src/components/homePage/ShopByCategory.scss
+++ b/src/components/homePage/ShopByCategory.scss
@@ -21,19 +21,19 @@
     margin-right: 16px;
     text-decoration: none;
     color: $PrimaryColor;
-    transition: $TransitionDuration;
+    transition: 0.3s;
     &:visited {
       color: $PrimaryColor;
+    }
+    &:hover .shopByCategory__card-image {
+      transform: scale(1.1);
     }
   }
   &__card-image {
     width: 100%;
     height: 368px;
     margin-bottom: 24px;
-    transition: $TransitionDuration;
-    &:hover {
-      transform: scale(1.1);
-    }
+    transition: 0.3s;
   }
   &__card-image-wrapper {
     overflow: hidden;
