--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,6 +3,8 @@
 header {
   display: flex;
   justify-content: space-between;
+  max-width: 1440px;
+  margin: auto;
   height: 64px;
   border: 1px solid $ElementsColor;
   &__nav {
