--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,16 @@
 
 .App {
   max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
+  position: relative;
+}
+
+.sidebar {
+  display: none;
+}
+
+@media screen and (max-width: 1100px) {
+  .sidebar {
+    display: block;
+  }
 }
