--- a/src/components/CartPage/CartPage.scss
+++ b/src/components/CartPage/CartPage.scss
@@ -68,3 +68,14 @@
     }
   }
 }
+
+@media screen and (max-width: 1100px) {
+  .cart-page {
+    max-width: 700px;
+    &__list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+}
