--- a/src/components/FavoritePage/FavoritePage.scss
+++ b/src/components/FavoritePage/FavoritePage.scss
@@ -8,3 +8,15 @@
     margin-bottom: 40px;
   }
 }
+
+@media screen and (max-width: 1100px) {
+  .favorite-page {
+    max-width: 700px;
+  }
+
+  .favorite-page__produc-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
