--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -3,3 +3,10 @@
   grid-template-columns: repeat(4, 272px);
   grid-gap: 16px;
 }
+
+@media screen and (max-width: 1100px) {
+  .product-list {
+    grid-template-columns: repeat(2, 272px);
+    grid-gap: 16px;
+  }
+}
