--- a/src/components/ProductSlider/ProductsSlider.scss
+++ b/src/components/ProductSlider/ProductsSlider.scss
@@ -62,3 +62,9 @@
     border: 1px solid $ElementsColor;
   }
 }
+
+@media screen and (max-width: 1100px) {
+  .productsSlider {
+    max-width: 700px;
+  }
+}
