--- a/src/components/homePage/BigSlider/BigSlider.scss
+++ b/src/components/homePage/BigSlider/BigSlider.scss
@@ -3,19 +3,21 @@
 .carousel {
   margin: auto;
   position: relative;
-  width: 1140px;
+  max-width: 1140px;
   height: 400px;
   margin-bottom: 100px;
   &__block {
     overflow: hidden;
     margin: auto;
     margin-top: 40px;
+    width: 1040px;
   }
   &__list {
     display: flex;
     list-style: none;
     padding: 0;
     margin: 0;
+    transition: 0.3s;
   }
 }
 
@@ -52,8 +54,9 @@
 .slider {
   &-points {
     position: relative;
-    left: 530px;
+    margin: auto;
     top: 10px;
+    width: 10%;
   }
   &-point {
     display: inline-block;
@@ -66,4 +69,36 @@
 
 .avtive-point {
   background-color: black;
+}
+
+@media screen and (max-width: 1100px) {
+  .carousel {
+    width: 600px;
+    height: 210px;
+    &__block {
+      width: 600px;
+    }
+    &__img {
+      width: 600px;
+    }
+  }
+
+  .prev-button {
+    transform: translateX(-40px);
+    height: 232px;
+  }
+
+  .next-button {
+    transform: translateX(-500px);
+    height: 232px;
+  }
+
+  .slider {
+    &-points {
+      position: relative;
+      margin: auto;
+      top: 10px;
+      width: 16%;
+    }
+  }
 }
