--- a/src/components/itemPage/ItemPage.scss
+++ b/src/components/itemPage/ItemPage.scss
@@ -121,3 +121,18 @@
     height: 100px;
   }
 }
+
+@media screen and (max-width: 1100px) {
+  .item-page {
+    max-width: 700px;
+  }
+
+  .other-block {
+    &__description {
+      width: 350px;
+    }
+    &__specification {
+      width: 350px;
+    }
+  }
+}
