--- a/src/components/itemsPage/ItemsPage.scss
+++ b/src/components/itemsPage/ItemsPage.scss
@@ -39,3 +39,16 @@
     padding: 0 $BodyTextSize;
   }
 }
+
+@media screen and (max-width: 1100px) {
+  .phones-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .nav-location {
+    margin-right: 80%;
+  }
+}
