--- a/src/helpers/SortBy.scss
+++ b/src/helpers/SortBy.scss
@@ -16,6 +16,7 @@
     margin: 0;
     box-shadow: 0 1px 0 1px rgba(0,0,0,0.04);
     appearance: none;
+    background-color: white;
     & option {
       font-size: $BodyTextSize;
       line-height: 21px;
