--- a/src/components/header/Nav.scss
+++ b/src/components/header/Nav.scss
@@ -41,7 +41,7 @@
     transition-delay: 0.2s;
   }
   span:nth-child(4) {
-    transition-delay: $TransitionDuration;
+    transition-delay: 0.3s;
   }
   span:nth-child(5) {
     transition-delay: 0.4s;
@@ -87,7 +87,7 @@
       transition-delay: 0.4s;
     }
     span:nth-child(4) {
-      transition-delay: $TransitionDuration;
+      transition-delay: 0.3s;
     }
     span:nth-child(3) {
       transition-delay: 0.2s;
