--- a/src/helpers/ItemsOnPage.scss
+++ b/src/helpers/ItemsOnPage.scss
@@ -15,6 +15,7 @@
     margin: 0;
     box-shadow: 0 1px 0 1px rgba(0,0,0,0.04);
     appearance: none;
+    background-color: white;
     & option {
       font-size: $BodyTextSize;
       line-height: 21px;
